# rsshogi-usi

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yml  docs.yml  rust-release.yml
crates/rsshogi-usi/: Cargo.toml
crates/rsshogi-usi/examples/: minimal_engine.rs
crates/rsshogi-usi/src/: error.rs  format.rs  lib.rs  parser.rs  transcript.rs
crates/rsshogi-usi/tests/: transcripts.rs
crates/rsshogi-usi/tests/transcripts/invalid/: strictness.txt
crates/rsshogi-usi/tests/transcripts/portable-invalid/: nonportable.txt
crates/rsshogi-usi/tests/transcripts/portable-valid/: canonical.txt
crates/rsshogi-usi/tests/transcripts/strict-invalid/: noncanonical.txt
crates/rsshogi-usi/tests/transcripts/strict-valid/: canonical.txt
crates/rsshogi-usi/tests/transcripts/valid/: adapter-sequences.txt  compatibility.txt  engine-to-gui.txt  gui-to-engine.txt
docs/: architecture.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md
docs/book/src/assets/: shogi-board.js  shogi-board.ts
docs/book/src/usi/: index.md
docs/book/theme/: custom.css  head.hbs
